--- a/demo.html
+++ b/demo.html
@@ -14,6 +14,7 @@
     <title>NuCamp: A Better Way To Camp</title>
 </head>
 <body>
+    <div>Hello world</div>
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
